--- a/spec/requestSettings.json
+++ b/spec/requestSettings.json
@@ -7,13 +7,16 @@
 
   "createGoal": {
     "goal": {
-      "title": "test-goal",
-      "description": "some text description here"
+      "title":        "test-goal",
+      "description":  "some text description here"
     }
   },
 
   "updateGoal": {
-    "goal": { "title": "updated-test-goal" }
+    "goal": {
+      "title":        "updated-test-goal",
+      "description":  "some text description here\n\n---\nsome text"
+    }
   },
 
   "getGoal": {},
